# repo-brain

./: .gitignore  CONTEXT_PARADOX.md  OVERVIEW.md  PLAN_v2.md  README.md  SETUP.md  TECHNICAL_OVERVIEW.md  TEST_PROMPTS.md  comparison.md  plan.md  pyproject.toml
docs/: repo-brain-performance-analysis.md  session-comparison-walkthrough.md
scripts/: analyze-opencode-session.sh
src/repo_brain/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py
src/repo_brain/analysis/: __init__.py  git_history.py  pattern_detector.py
src/repo_brain/generators/: architecture.py  opencode.py  repomap.py
src/repo_brain/ingestion/: build_graph.py  chunker.py  embedder.py  scanner.py  tree_sitter_chunker.py
src/repo_brain/storage/: graph_store.py  metadata_db.py  vector_store.py
src/repo_brain/tools/: architecture.py  dependencies.py  refresh.py  scope.py  search.py
tests/eval/: COMPLETION_SUMMARY.md  INTEGRATION_NOTES.md  README.md  README_E2E.md  analyze_results.py  e2e_task_completion.py  generate_meaningful_summary.py  metrics.py  opencode_token_tracker.py  quick_eval.py  run_comparison.py  run_e2e_tests.sh  sme_invoker.py
tests/eval/datasets/: code_review.json  scope.json  search.json  task.json
tests/eval/results/: meaningful_summary.md  meaningful_summary_corrected.md  meaningful_summary_latest.md  results.csv  search_001_regular_2026-03-12T03:38:04.562538.json  search_001_regular_2026-03-12T03:44:08.199584.json  search_001_regular_2026-03-12T03:45:03.701042.json  search_001_regular_2026-03-12T03:53:04.265760.json  search_001_repo-brain_2026-03-12T03:37:51.208246.json  search_001_repo-brain_2026-03-12T03:43:55.090758.json  (+75 more)
(+11 files in other folders)
